<resources>
    <string name="app_name">Tutora</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_courses">My Courses</string>
    <string name="menu_category">Category</string>
    <string name="menu_watchlater">Watch Later</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About Us</string>
    <string name="menu_profile">Profile</string>
    <string name="quizEX"><![CDATA[What is the output of the following program?  int getFirstDigit(int value) { \t\treturn value/10; }  int getLastDigit(int value) { \t\treturn value % 10; }  int main(int argc, char *argv[]) { \t\tint x; \t\tint first; \t\tint second;  \t\tx = 42; \t\tfirst = getFirstDigit(x); \t\tsecond = getSecondDigit(x); \t\tcout << second; \t\tcout << first; }]]></string>
</resources>
